<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MenuOpcoes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true" 
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/title_int_grav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"/>

            <TextView
                android:text="@string/desc_int_grav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingTop="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"/>
                
            <Spinner  
                android:id="@+id/delaySpinner"  
                android:layout_width="match_parent"  
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:text="@string/title_form_arq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>

                <TextView
                    android:text="@string/desc_form_arq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:id="@+id/cgpFormatArq">

                    <RadioButton
                        android:text="@string/item_form_arq_csv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/chkCSV"/>

                    <RadioButton
                        android:text="@string/item_form_arq_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/chkTXT"/>

                </RadioGroup>

            </LinearLayout>
                
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp">

                <TextView
                    android:text="@string/title_max_lin"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <Switch
                        android:id="@+id/switchStopRecording"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/txtSwitchStopRecording"
                        android:text="@string/item_max_lin_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:textSize="12sp"/>

                </LinearLayout>

                <TextView
                    android:text="@string/desc_max_lin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>

            </LinearLayout>

            <EditText
                android:id="@+id/edtNumMaxLinhas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/hint_max_lin"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp">

                <TextView
                    android:text="@string/title_graf_vis"
                    android:textSize="18sp"
                    android:paddingBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/desc_graf_vis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="15dp"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkboxAcc"
                    android:text="@string/item_graf_vis_acc"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkboxGir"
                    android:text="@string/item_graf_vis_gir"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp">

                <TextView
                    android:text="@string/title_modo_calc"
                    android:textSize="18sp"
                    android:paddingBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/desc_modo_calc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="15dp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rgpModoCalc">

                    <RadioButton
                        android:id="@+id/rdbBruto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item_modo_calc_brt" />

                    <RadioButton
                        android:id="@+id/rdbVariacao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item_modo_calc_var" />
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/controll_layout"
            android:showDividers="middle"
            android:divider="?attr/dividerVertical">

        <TextView
                android:text="@string/btn_salvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSalvar"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:foreground="?attr/selectableItemBackground"
                android:layout_weight="1"
                android:textSize="20sp"/>

        <TextView
                android:text="@string/btn_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCancelar"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:foreground="?attr/selectableItemBackground"
                android:layout_weight="1"
                android:textSize="20sp"/>
    </LinearLayout>
</RelativeLayout>