<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    tools:context=".MenuPrincipal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/app_icon"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="60dp">
        
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:id="@+id/btnConfigs"
                    android:layout_margin="5dp"
                    android:background="@drawable/item_menu"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/icon_settings"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_opcoes"
                        android:textColor="@android:color/black"
                        android:textAllCaps="true"
                        android:textSize="18sp"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:id="@+id/btnIniciar"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/item_menu"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/icon_play"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:text="@string/item_iniciar"
                        android:layout_gravity="center"/>
                        
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/item_menu"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/icon_info"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_sobre"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:layout_gravity="center"/>
                        
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    <Button
        android:id="@+id/btnRegistros"
        android:text="@string/btn_reg_ant"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="18sp"
        android:background="@drawable/rectangle"
        android:foreground="?attr/selectableItemBackground"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>