<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:text="@string/eixo_x"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:paddingLeft="20dp"
                        android:paddingStart="20dp"
                        android:paddingRight="10dp"
                        android:paddingEnd="10dp"/>

                    <TextView
                        android:text="@string/sensor_acc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"/>

                </LinearLayout>

                <com.jjoe64.graphview.helper.GraphViewXML
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    app:seriesData="0=0"
                    android:id="@+id/graphAccEixoX"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:text="@string/eixo_y"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:paddingLeft="20dp"
                        android:paddingStart="20dp"
                        android:paddingRight="10dp"
                        android:paddingEnd="10dp"/>

                    <TextView
                        android:text="@string/sensor_acc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"/>

                </LinearLayout>

                <com.jjoe64.graphview.helper.GraphViewXML
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:paddingLeft="20dp"
                    android:paddingStart="20dp"
                    android:paddingRight="20dp"
                    android:paddingEnd="20dp"
                    app:seriesData="0=0"
                    android:id="@+id/graphAccEixoY"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:text="@string/eixo_z"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:paddingLeft="20dp"
                        android:paddingStart="20dp"
                        android:paddingRight="10dp"
                        android:paddingEnd="10dp"/>

                    <TextView
                        android:text="@string/sensor_acc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"/>

                </LinearLayout>

                <com.jjoe64.graphview.helper.GraphViewXML
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    app:seriesData="0=0"
                    android:id="@+id/graphAccEixoZ"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:text="@string/eixo_x"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:paddingLeft="20dp"
                        android:paddingStart="20dp"
                        android:paddingRight="10dp"
                        android:paddingEnd="10dp"/>

                    <TextView
                        android:text="@string/sensor_gir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"/>

                </LinearLayout>

                <com.jjoe64.graphview.helper.GraphViewXML
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    app:seriesData="0=0"
                    android:id="@+id/graphGirEixoX"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:text="@string/eixo_y"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:paddingLeft="20dp"
                        android:paddingStart="20dp"
                        android:paddingRight="10dp"
                        android:paddingEnd="10dp"/>

                    <TextView
                        android:text="@string/sensor_gir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"/>

                </LinearLayout>

                <com.jjoe64.graphview.helper.GraphViewXML
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    app:seriesData="0=0"
                    android:id="@+id/graphGirEixoY"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:text="@string/eixo_z"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:paddingLeft="20dp"
                        android:paddingStart="20dp"
                        android:paddingRight="10dp"
                        android:paddingEnd="10dp"/>

                    <TextView
                        android:text="@string/sensor_gir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"/>

                </LinearLayout>

                <com.jjoe64.graphview.helper.GraphViewXML
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    app:seriesData="0=0"
                    android:id="@+id/graphGirEixoZ"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>